feat: added blog posts, blog post section, skill levels, updated skills, css improved

--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "gatsby": "^4.12.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^4.12.1",
+    "gatsby-plugin-mdx-frontmatter": "^0.0.4",
     "gatsby-plugin-offline": "^5.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sass": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
+    "gatsby-remark-prismjs": "^6.12.1",
     "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "node-sass": "^6.0.0",
+    "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
