--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-remark-images": "^6.12.1",
+    "gatsby-remark-katex": "^6.12.1",
     "gatsby-remark-prismjs": "^6.12.1",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
+    "katex": "^0.15.3",
     "node-sass": "^6.0.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
