--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Anurag Shenoy",
   "homepage": "https://shenoy-anurag.github.io/",
   "dependencies": {
-    "gatsby": "^4.12.0",
+    "gatsby": "^4.25.9",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^4.12.1",
     "gatsby-plugin-mdx-frontmatter": "^0.0.4",
@@ -23,7 +23,6 @@
     "gatsby-transformer-remark": "^5.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "katex": "^0.15.3",
-    "node-sass": "^6.0.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -31,7 +30,8 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "sass": "^1.83.1"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
