--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.83.1"
   },
   "devDependencies": {
+    "gatsby-remark-static-images": "^1.2.1",
     "gh-pages": "^3.2.3",
     "prettier": "2.6.2"
   },
